force-app/main/default/objects/Trade_Plate_Checklist__c/Trade_Plate_Checklist__c.object-meta.xml
<CustomObject>
    <label>Trade Plate Checklist</label>
    <nameField>
        <displayFormat>TPC{00000000}</displayFormat>
        <label>Trade Plate Checklist RefID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Plate Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>