force-app/main/default/objects/Trade_Plate_Checklist__c/fields/Daily_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Daily_Checklist__c</fullName>
    <label>Daily Checklist</label>
    <referenceTo>Daily_Checklist__c</referenceTo>
    <relationshipLabel>Trade Plate Checklists</relationshipLabel>
    <relationshipName>Trade_Plate_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>