force-app/main/default/objects/Trade_Plate_Checklist__c/fields/Is_Present_AM__c.field-meta.xml
<CustomField>
    <fullName>Is_Present_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Present Open</label>
    <type>Checkbox</type>
</CustomField>