force-app/main/default/objects/Trade_Plate_Checklist__c/fields/Trade_Plate__c.field-meta.xml
<CustomField>
    <fullName>Trade_Plate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Plate</label>
    <referenceTo>Trade_Plate__c</referenceTo>
    <relationshipLabel>Trade Plate Checklists</relationshipLabel>
    <relationshipName>Trade_Plate_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>